Fixes: NB#201073 - styling documentation does not explain how to create css files for external libraries
RevBy: Armin Berres

--- a/doc/src/styling.dox
+++ b/doc/src/styling.dox
@@ -1,11 +1,11 @@
 /*! \page styling Overview
 
-DirectUI provides a powerful styling engine for applications to customize their look & feel. It provides following functionality to application development
+MeeGo Touch provides a powerful styling engine for applications to customize their look & feel. It provides following functionality to application development:
 
     \li Style sheets & style sheet parser
     \li Type safe styling parameters
-    \li Automatic tools to populate the instantiated styles according to definitions in style sheet
-    \li Simple and robust interface for application developers to access to the styling parameters
+    \li Automatic tools to populate the instantiated styles according to definitions in style sheets
+    \li Simple and robust interface for application developers to access the styling parameters
     \li Flexible but simple way to define and use style parameters using inheritance, modes etc. 
 
 \section responsibilities People involved & their responsibilities 
@@ -17,16 +17,16 @@ DirectUI provides a powerful styling engine for applications to customize their 
     - UI Designer
         - Has an idea how the widget should look and how it needs to be styled.
         - Provides design for the styling and answers to questions about it.
-    - Software developer
-        - Implements the stylable object (widget, layout etc..).
-        - Creates enablers for the styling in source code level.
+    - Software Developer
+        - Implements the stylable object (widget, layout, etc..).
+        - Creates enablers for the styling on the source code level.
         - Creates initial version of the stylesheet for testing.
     - Tester
-        - Tests that the styling is actually working according to the design
-    - UI Designer / Theme implementor
-        - Fixes the style sheet to contain proper values for the application
-        - Ensures that the final version of the style sheet that ships out with the product is according 
-          to the requirements.
+        - Tests that the styling is actually working according to the design.
+    - UI Designer / Theme Implementor
+        - Updates the style sheet to contain proper values for the application.
+        - Ensures that the final version of the style sheet that ships out with the product matches
+          the requirements.
 
 \section links Documentation links 
     \li \subpage styling_concepts "Basic concepts of styling"
